DOC update release notes for picocli 4.0